# senior_project

./: README.md  lex  lex.cpp
Highlight/: CMakeLists.txt  FileReader.cpp  FileReader.h  README.md  main2.cpp  mingw-toolchain.cmake
Highlight/build_apple_silicon/: CMakeCache.txt  Makefile  cmake_install.cmake  highlight
Highlight/build_windows/: CMakeCache.txt  Makefile  cmake_install.cmake
Highlight/data/: anna_english.txt  anna_russian.txt  dq.txt  input.txt  input16.txt  outfile.rtf  output.html  output.txt  output2.html  prefix.txt  root.txt  suffix.txt
Highlight/include/: FileHandler.h  FileReader.h  SearchHandler.h  ThreadPool.h  Tokenizer.h  UnitTest.h  UserInput.h  UserInterface.h
Highlight/src/: FileHandler.cpp  FileReader.cpp  SearchHandler.cpp  ThreadPool.cpp  Tokenizer.cpp  UnitTest.cpp  UserInput.cpp  UserInterface.cpp  main.cpp
Old/Old_Lex_Analyzer/: front.cpp  front.h  main  main.cpp  rdparse.cpp  rdparse.h
Old/Text_Highlight/: UnitTest.cpp  infile.txt  main  main.cpp  outfile.txt  tokenGen.h
Old_Lex_Analyzer/: front.in
TextHighlight_v2/demo_data/chinese_data/data/: newsArticle_chinese.txt  newsArticle_english.txt  prefix.txt
TextHighlight_v2/demo_data/english_data/data/: dq.txt  root.txt
Text_Highlight/: filein.in  infile.txt  main  main.cpp  outfile.txt  tokenGen.cpp  tokenGen.h
